--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -27,8 +27,8 @@
         <div class="card h-100">
           <div class="card-body" id="meeting_detail_card">
             <h5 class="card-title">Meeting Detail</h5>
-            <h6 class="card-subtitle text-muted">Monday, 3rd January 2018 at 3:00pm</h6>
-            <div id="meeting_detail"></div>
+            <h6 class="card-subtitle text-muted" id="meeting_details"></h6>
+            <div id="meeting_breakdown"></div>
           </div>
         </div>
       </div>
